--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,8 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
-        "APP_URL": "https://yourprojectdomain.com",
+        "APP_URL": "https://task-manager-coding-test.vercel.app",
+        "APP_KEY": "APP_KEY=base64:TMHwnX+b0KD9tLZEH7934skoGTVa4YrPZMzdDLWy1Oo=",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
